# Example_SARA-R5_TinyML_Human_Activity_Detection

./: .cproject  .gitmodules  .mxproject  .project  CMakeLists.txt  Porting_ublx_lib Debug.launch  Porting_ublx_lib.ioc  README.md  STM32F437VGTX_FLASH.ld  STM32F437VGTX_RAM.ld  toolchain-STM32F405.cmake  toolchain-STM32F407.cmake  toolchain-STM32F437.cmake
Core/Inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: debug_log.c  main.cpp  model_tflite.cc  model_tflite_micro.h  stm32f4xx_hal_msp.c  system_stm32f4xx.c
Drivers/: CMakeLists.txt
mcu_package/: CMakeLists.txt
tensorflow/: CMakeLists.txt
ubxlib_STM32_Port/mcu/stm32f4/: .project
ubxlib_STM32_Port/mcu/stm32f4/cfg/: u_cfg_app_platform_specific.h
ubxlib_STM32_Port/mcu/stm32f4/runner/: Makefile
ubxlib_STM32_Port/src/: u_port.c  u_port_debug.c  u_port_private.c  u_port_spi.c  u_port_uart.c
